<resources>
    <string name="app_name">Pet Task Tracker</string>

    <!-- titles -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_pets">Pets</string>
    <string name="title_activity_view_user">View User</string>
    <string name="title_activity_view_pet">View Pet</string>
    <string name="title_activity_add_pet">Add a Pet</string>
    <string name="title_activity_add_task">Add a Task</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_main">Pet Task Tracker</string>

    <!-- view pets -->
    <string name="pet_name_1">Cookie</string>
    <string name="pet_name_2">Rudy</string>
    <string name="cat_pic_alt">Cat</string>
    <string name="dog_pic_alt">Dog</string>

    <!-- view users -->
    <string name="user_name_1">Martha</string>
    <string name="user_name_2">Stuart</string>
    <string name="user_name_3">Tim</string>
    <string name="profile_pic_alt">Profile</string>

    <!-- add pet -->
    <string name="prompt_pet_name">Name</string>
    <string name="prompt_pet_type">Type</string>
    <string-array name="array_pet_types">
        <item>Cat</item>
        <item>Dog</item>
    </string-array>
    <string name="prompt_pet_pic">Image</string>
    <string name="prompt_pet_confirm">Save Pet</string>

    <!-- add task -->
    <string name="prompt_task_type">Type</string>
    <string-array name="array_task_type">
        <item>Food</item>
        <item>Walk</item>
        <item>Medication</item>
    </string-array>
    <string name="prompt_task_pet">Pet</string>
    <string-array name="array_task_pet">
        <item>Cookie</item>
        <item>Rudy</item>
    </string-array>
    <string name="prompt_task_user">User</string>
    <string-array name="array_task_user">
        <item>Martha</item>
        <item>Stuart</item>
        <item>Alex</item>
    </string-array>
    <string name="prompt_task_time">Time</string>
    <string-array name="array_task_time">
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
    </string-array>
    <string name="prompt_task_repeat">Repeat</string>
    <string-array name="array_task_repeat">
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>
    <string name="prompt_task_notes">Notes</string>
    <string name="button_task_confirm">Save Task</string>
    <string name="button_task_edit_confirm">Save Task</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
