<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollIndicators="right"
    tools:context="northeastern.is4300.pettasktracker.AddTaskActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/prompt_task_type"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/prompt_task_pet"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/prompt_task_user"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/prompt_task_time"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/prompt_task_repeat"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:text="@string/prompt_task_notes"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/prompt_task_confirm" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
